css/style.css
* {
    box-sizing: border-box;
}

body{
    font-family: 'Quicksand', sans-serif;
}

/*Navigation*/

nav{
    display: flex;
    background: #000;
    padding: 2%;
    flex-flow: row wrap;
    justify-content: space-around;
}

nav a, nav form{
    margin-top: 0%;
    padding: 1%;
    color: #fff;
    flex: 0 0 100%;
    text-transform: lowercase;
    text-align: center;
    width: 600px;
}

/*Sign up and sign in form*/

form.login, form.register{
    margin: 100px;
}

form.login input, form.register input{
    margin-bottom: 20px;
    border: 0;
    outline: 0;
    background: transparent;
    border-bottom: 2px solid #000;
}

form.login input[type=submit], form.register input[type=submit]{
    padding: 10px;
    background-color: #000;
    color: #fff;
    border-radius: 10%;
}

nav form input{
    border: 0;
    outline: 0;
    background: transparent;
    border-bottom: 2px solid #fff;
    color:white;
}

.container{
  width:960px;
  margin:auto;
  display:flex;
}

.grid{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(20vw, 1fr));
    grid-auto-rows: minmax(20vw, 25vw);
    grid-gap: 1em;
    grid-auto-flow: row;
    padding: 1em;
}

.post__img{
    width: 100%;
    height: 285px;
    object-fit: cover;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
    top: 7px;
}

.container_post {
    width: 350px;
    position: relative;
    /* overflow: hidden; */
    background: #eeeeee;
    padding: 30px 0 0;
    box-sizing: border-box;
    border-radius: 5px;
    margin-bottom: 60px;
}

.loadmore {
    background-color : #31B0D5;
    color: white;
    padding: 10px 20px;
    border-radius: 4px;
    border-color: #46b8da;
}

.btnLoadmore {
    position: fixed;
    bottom: -4px;
    right: 10px;
}

.search .container{
  /* background-color: rgba(148, 148, 148, 0.1); */
  border-radius: 10px;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  padding:25px 15px;
  max-width:100%;
}

.searched a{
  width:48%;
}

.searchPost{
  height:310px;
}

.popup {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100%;
    top: 0;
    left: 0;
    background:rgba(0,0,0,0.6);
}

.popup .close {
    position: absolute;
    right:20px;
    top: 15px;
    color:white;
    font-size: 32px;
    text-decoration: none;
}

.popup .post {
    position: absolute;
    width: 600px;
    background: white;
    padding: 20px 100px;
    margin: 0 auto;
    border-radius: 10px;
    box-sizing: border-box;
}

.popup .popup_img{
    width: 250px;
    height: 250px;
    margin: 0 auto;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.popup p{
    text-align: center;
    color:#333;
    width:100%;
}

.popup_name{
    color: #333;
    font-weight: bold;
    text-align: center;
    text-decoration: none;
    padding-bottom: 20px;
    display: block;
}

/*Color filter*/

.color{
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
}

.color__item{
    border-radius: 100%;
    padding: 0.5em;
    font-weight: bold;
    font-size: 1.5em;
    flex: 1 1 minmax(0.5em, auto);
    height: auto;
}

.color__item:before{
    content: ' ';
    padding-top: 100%;
}

.color__item--red{
    background-color: tomato;
}

.color__item--orange{
    background-color: #FDCD77;
}

.color__item--yellow{
    background-color: #FFF68C;
}

.color__item--green{
    background-color: #B6D881;
}

.color__item--turquoise{
    background-color: #6BCADA;
}

.color__item--blue{
    background-color: #71ABD9;
}

.color__item--purple{
    background-color: #9977B0;
}

.color__item--pink{
    background-color: #F497A7;
}

.color__item--white{
    background-color: #FFF;
    border: 1px solid #000;
}

.color__item--gray{
    background-color: #B2B2B2;
}

.color__item--black{
    background-color: #424242;
}

.color__item--brown{
    background-color: #CCAF88;
}

a.post__full {
    position: relative;
    overflow: hidden;
    background: #eeeeee;
    padding: 30px 0 0;
    box-sizing: border-box;
    border-radius: 5px;
}

p.post__name {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    color: #333;
    background: white;
    padding: 10px 0;
    margin: 0;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    font-weight: bold;
}

p.timeAgo {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: 0;
    padding: 10px 0;
    color: #333;
    background: white;
    text-align: center;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.option--delete,
.option--edit {
    display: block;
    text-align: left;
}

.edit .option--edit {
    margin-bottom: 0;
}

.edit_button {
    padding: 7px 20px;
}

.edit__options {
    visibility: hidden;
    z-index: 300;
    background: white;
    width: 210px;
    left: 50%;
    position: absolute;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(14, 5, 5, 0.2);
  }
  
.edit {
    text-align: left;
    position: absolute;
    right: -8px;
    top: 10px;
}

input[name="delete"] {
    border: none;
    background: red;
    color: white;
    cursor: pointer;
    padding: 5px 10px;
    border-radius: 3px;
    transition: all .2s;
}

input[name="delete"]:hover {
    background: crimson;
}

textarea[name="descriptionEdit"] {
    border: none;
    background: #EAEAEA;
    padding: 5px;
    box-sizing: border-box;
    resize: vertical;
    border-radius: 5px;
    margin-bottom: 3px;
}

input[name="update"] {
    border: none;
    background: #333;
    color: white;
    cursor: pointer;
    padding: 5px 10px;
    border-radius: 3px;
    transition: all .2s;
}

input[name="update"]:hover {
    background: #777;
}

/*Button on search page*/

.btn__change__view{
    display: block;
    position: absolute;
    right: 1em;
    margin-top: 1em;
    background-color : white;
    z-index: 5;
    color: black;
    padding: 10px 20px;
    border-radius: 4px;
    border: 5px solid #46b8da;
}

.likes__users--names{
    display: none;
    position: absolute;
    margin-bottom: 5em;
    background-color: #f9f9f9;
    /*min-width: 5em;*/
    max-width: 15em;
    max-height: 5em;
    overflow-y: scroll;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    padding: 5%;
    z-index: 1;
}

.likes__users:hover .likes__users--names{
    display: block;
}

.likes-count p{
    text-decoration: underline;
}

.save{
    position: absolute;
    top: 0;
    z-index: 2;
    margin: 10px 15px;
    cursor: pointer;
}

@media only screen and (min-width: 600px) {
    nav a, nav form{
        flex-flow: row wrap;
        flex: 1 0 10%;
        text-transform: lowercase;
        text-align: center;
    }
}

